2011-01-26  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt][Symbian] Fix --minimal build
        https://bugs.webkit.org/show_bug.cgi?id=52839

        Move definition of USE_SYSTEM_MALLOC out of pri file.
        Put it in platform.h instead.

        * wtf/Platform.h:
        * wtf/TCSystemAlloc.cpp:
        * wtf/wtf.pri:

2011-01-26  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Andreas Kling.

        [WINCE] Add JIT support to build system
        https://bugs.webkit.org/show_bug.cgi?id=53079

        * CMakeListsWinCE.txt:

2011-01-25  Adam Roben  <aroben@apple.com>

        Windows Production build fix

        Reviewed by Steve Falkenburg.

        * JavaScriptCore.vcproj/JavaScriptCore.make: Set BUILDSTYLE to Release_PGO at the very start
        of the file so that ConfigurationBuildDir takes that into account. Also set it the right way
        (by redefining the macro) rather than the wrong way (by modifying the environment variable).

2011-01-25  Steve Falkenburg  <sfalken@apple.com>

        Rubber-stamped by Adam Roben.

        Windows production build fix.
        Use correct environment variable escaping

        * JavaScriptCore.vcproj/JavaScriptCore.make:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreGenerated.make:

2011-01-25  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        JSON.stringify processing time exponentially grows with size of object
        https://bugs.webkit.org/show_bug.cgi?id=51922

        Remove last use of reserveCapacity from JSON stringification, as it results
        in appalling append behaviour when there are a large number of property names
        and nothing else.

        * runtime/JSONObject.cpp:
        (JSC::Stringifier::appendQuotedString):

2011-01-25  Antti Koivisto  <antti@apple.com>

        Not reviewed.
        
        Try to fix windows build.
